<resources>
    <string name="app_name">Photo Editor</string>
    <string name="text_number">%1$d</string>
    <string name="crop_image">Crop</string>
    <string name="merge">Merge</string>
    <string name="black_white">BlackWhite</string>
    <string name="change_color">Color</string>
    <string name="edit_hue">Hue</string>
    <string name="effectses">Effects</string>
    <string name="light">Light</string>
    <string name="highlight">Highlight</string>
    <string name="change_movies">Change Movies</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title_image_folder">Albums</string>
    <string name="text_all_picture">All picture</string>
    <string name="action_done">Done</string>
    <string name="save_sucsess">save success file in saved_images folder</string>
    <string name="save_error">File not save</string>
    <string name="text_photo_editor">Photo Editor</string>
    <string name="text_video">Video Maker</string>
    <string name="scale">Scale</string>
    <string name="feature_effect">Effect</string>
    <string name="feature_color">Color</string>
    <string name="feature_adjust">Adjust</string>
    <string name="feature_crop">Crop</string>
    <string name="feature_highlight">Highlight</string>
    <string name="feature_orientation">Orientation</string>
    <string name="feature_brightness">Brightness</string>
    <string name="feature_hue">Hue</string>
    <string name="feature_contrast">Contrast</string>
    <string name="loading">Loading</string>
    <string name="video_saved">Video saved in Download</string>
    <string name="share_fb">Share in Facebook</string>
    <string name="facebook_app_id">1204447269650459</string>
    <string name="share_fb_success">Video Share Success</string>
    <string name="video_share_error">Video not share</string>
    <string name="connect_fb_error">Connect Facebook error</string>
    <string name="action_none">None</string>
    <string name="action_autofix">Autofix</string>
    <string name="action_bw">Min/Max Color Intensity</string>
    <string name="action_brightness">Brightness</string>
    <string name="action_contrast">Contrast</string>
    <string name="action_crossprocess">Cross Process</string>
    <string name="action_documentary">Documentary</string>
    <string name="action_duotone">Duo Tone</string>
    <string name="action_filllight">Fill Light</string>
    <string name="action_fisheye">Fish Eye</string>
    <string name="action_flipvert">Flip Vertical</string>
    <string name="action_fliphor">Flip Horizontal</string>
    <string name="action_grain">Grain</string>
    <string name="action_grayscale">Grayscale</string>
    <string name="action_lomoish">Lomoish</string>
    <string name="action_negative">Negative</string>
    <string name="action_posterize">Posterize</string>
    <string name="action_rotate">Rotate</string>
    <string name="action_saturate">Saturate</string>
    <string name="action_sepia">Sepia</string>
    <string name="action_sharpen">Sharpen</string>
    <string name="action_temperature">Temperature</string>
    <string name="action_tint">Tint</string>
    <string name="action_vignette">Vignette</string>
    <string name="text_merge_photo">Merge Image</string>
    <string name="title_permission_storage">Need Storage Permission</string>
    <string name="msg_permission_storage">This app needs access storage permission.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_grant">Grant</string>
    <string name="title_permission_camera">Need Camera Permission</string>
    <string name="msg_permission_camera">This app needs phone permission.</string>
    <string name="text_flip">Flip</string>
    <string name="text_rotate">Rotate</string>
    <string name="title_effect">Effect</string>
    <string name="title_color">Color</string>
    <string name="title_adjust">Crop</string>
    <string name="title_highlight">Highlight</string>
    <string name="title_rotation">Rotate</string>
    <string name="title_collage_1">Type1</string>
    <string name="title_collage_2">Type2</string>
    <string name="title_collage_3">Type3</string>
    <string name="title_collage_4">Type4</string>
    <string name="title_collage_5">Type5</string>
    <string name="title_collage_6">Type6</string>
    <string name="msg_converting">Video converting</string>
</resources>
