<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey_200"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.framgia.photoeditor.ui.widget.BscTextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_100"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_45"
        android:textStyle="bold"/>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/dp_220"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60"
        app:cardBackgroundColor="@color/color_purple_200"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardMaxElevation="@dimen/dp_4"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/linear_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_photo_camera_white"/>

            <com.framgia.photoeditor.ui.widget.BscTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_photo_editor"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/dp_220"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        app:cardBackgroundColor="@color/color_yellow_600"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardMaxElevation="@dimen/dp_4"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/linear_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_video_library_white"/>

            <com.framgia.photoeditor.ui.widget.BscTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_video"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
