<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey_200"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp_8"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/linear_feature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_brightness"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_70"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/color_grey_800"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_brightness"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/feature_brightness"
                android:textColor="@color/color_white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_contrast"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_70"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/color_grey_800"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_contrast"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/feature_contrast"
                android:textColor="@color/color_white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_hue"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_70"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/color_grey_800"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_hue"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_hue"/>

            <TextView
                android:id="@+id/text_hue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/feature_hue"
                android:textColor="@color/color_white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_feature_brightness"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:background="@color/color_grey_800"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_brightness_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            app:srcCompat="@drawable/ic_clear_white"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/seekbar_brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_weight="1"
            android:padding="@dimen/dp_16"/>

        <ImageView
            android:id="@+id/image_brightness_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            app:srcCompat="@drawable/ic_done_white_24dp"/>
    </LinearLayout>
</LinearLayout>
